--- a/BeneluxWebb/templates/partials/_stats_table_sticky.html
+++ b/BeneluxWebb/templates/partials/_stats_table_sticky.html
@@ -3,11 +3,21 @@
         <thead>
             <tr>
                 <th>Player</th>
-                <th class="text-center sortable" data-field="matches_played" data-column="matches_played">
-                    Matches Played
-                    {% if sort == 'matches_played' %}
+                <th class="text-center sortable" data-field="maps_played" data-column="maps_played">
+                    Maps
+                    {% if sort == 'maps_played' %}
                         <i class="fas fa-sort-up sort-indicator"></i>
-                    {% elif sort == '-matches_played' %}
+                    {% elif sort == '-maps_played' %}
+                        <i class="fas fa-sort-down sort-indicator"></i>
+                    {% else %}
+                        <i class="fas fa-sort sort-indicator"></i>
+                    {% endif %}
+                </th>
+                <th class="text-center sortable" data-field="map_win_pct" data-column="map_win_pct">
+                    Map Win %
+                    {% if sort == 'map_win_pct' %}
+                        <i class="fas fa-sort-up sort-indicator"></i>
+                    {% elif sort == '-map_win_pct' %}
                         <i class="fas fa-sort-down sort-indicator"></i>
                     {% else %}
                         <i class="fas fa-sort sort-indicator"></i>
@@ -17,22 +27,34 @@
         </thead>
         <tbody>
             {% for player in data %}
-            <tr>
+            <tr class="player-row" data-row="{{ loop.index0 }}">
                 <td>
-                    <div class="d-flex align-items-center">
-                        <img
-                            src="{{ player['avatar'] if player['avatar'] else url_for('static', filename='img/faceit/player_avatar_placeholder.jpg') }}"
-                            alt="avatar" width="24" height="24"
-                            class="rounded-circle me-2">
-                        <img
-                            src="{{ url_for('static', filename='img/flags/' ~ player['country']|lower ~ '.png') }}"
-                            alt="{{ player['country'] }}" width="20"
-                            class="me-2">
-                        <span>{{ player['player_name'] }}</span>
-                    </div>
+                    <a class="player-link" href="https://www.faceit.com/en/players/{{ player['player_name'] }}">
+                        <div class="d-flex align-items-center">
+                            <img
+                                src="{{ player['avatar'] if player['avatar'] else url_for('static', filename='img/faceit/player_avatar_placeholder.jpg') }}"
+                                alt="avatar" width="24" height="24"
+                                class="rounded-circle me-2">
+                            <img
+                                src="{{ url_for('static', filename='img/flags/' ~ player['country']|lower ~ '.png') }}"
+                                alt="{{ player['country'] }}" width="20"
+                                class="me-2">
+                            <div class="col">
+                                <span>{{ player['player_name'] }}</span>
+                                {% if player['aliases'] %}
+                                    <span class="text-muted small">
+                                        [{{ player['aliases'] }}]
+                                    </span>
+                                {% endif %}
+                            </div>
+                        </div>
+                    </a>
                 </td>
-                <td class="text-center">
-                    {{ player['matches_played'] if player['matches_played'] else '-' }}
+                <td class="numeric-cell">
+                    {{ player['maps_played'] if player['maps_played'] else '-' }}
+                </td>
+                <td class="numeric-cell">
+                    {{ player['map_win_pct']|round(1)}}
                 </td>
             </tr>
             {% endfor %}
