--- a/BeneluxWebb/templates/base.html
+++ b/BeneluxWebb/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+
     <!-- Bootstrap and icon fonts -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -38,7 +39,6 @@
 
     <title>{% block title %}Home{% endblock %}</title>
   </head>
-  
   <body class="dark-mode">
     
     <!-- Nav bar top -->
@@ -83,10 +83,8 @@
       </div>  
     </nav>
 
-    <div class="container" style="min-height: 100vh">
+    <div class="container-fluid" style="min-height: 100vh">
       {% block content %}
-      <h1>Welcome to the Benelux CS Page</h1>
-      <p>This is a simple Flask application to display CS stats.</p>
       {% endblock %}
     </div>
 
